# deploy_bot

./: .env  .gitignore  cookies.txt  main.py  pyproject.toml
app/db/: models.py  requests.py
app/handlers/: __init__.py  admin.py
app/services/: facts.py  middlewares.py  scheduler.py  video_queue.py
src/: abstract.py  config.py  contexts.py  facts.py  handlers.py  interfaces.py  main.py  middlewares.py  models.py  scheduler.py  utils.py
src/browser/: stealth.py
src/provider/: browser_providers.py  decorators.py  factories.py  interfaces.py  manager.py  models.py  providers.py  tasks.py
src/queues/: factories.py  interfaces.py  tasks.py
src/queues/implementations/: inmemory.py  redis.py
src/repository/: facts.py  proxy.py  publication_slot.py  schedule.py
