[tool.poetry]
name = "telegram-bot"
version = "0.1.1"
description = "Telegram bot for automated video uploading"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.0"
sqlalchemy = "^2.0"
ruff = "^0.12.11"
greenlet = "^3.2.4"
playwright = "^1.55.0"
pydantic-settings = "^2.10.1"

[poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backery = "poetry.core.masonry.api"